Fix avatar-image to be round with overflow: hidden;

--- a/scss/_avatars.scss
+++ b/scss/_avatars.scss
@@ -10,6 +10,8 @@
   }
 
   &.avatar-image {
+    overflow: hidden;
+
     img {
       width: $janus-avatar-image-size;
     }
